[project]
name = "pdf-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.24",
    "langchain-groq>=0.3.2",
    "langchain-openai>=0.3.18",
    "protobuf==3.20.*",
    "pypdf>=5.5.0",
    "streamlit>=1.45.1",
]
